@startuml US086_DomainModel
skinparam shadowing false
skinparam classAttributeIconSize 0

title Domain Model Excerpt — US086 Pilot Remote Access

package "Pilot Aggregate" <<Rectangle>> {
    class Pilot <<entity, aggregate root>> {
        active
    }
}

package "User Aggregate" <<Rectangle>> {
    class User <<entity, aggregate root>> {
        name
        phoneNumber
        position
        skillsAssessmentDate
    }
}

package "AirTransportCompany Aggregate" <<Rectangle>> {
    class AirTransportCompany <<entity, aggregate root>> {
        name
    }
    class IATACode <<value object>> {
        code
    }
}

package "AircraftModel Aggregate" <<Rectangle>> {
    class AircraftModel <<entity, aggregate root>> {
        modelName
    }
}

package "Flight Aggregate" <<Rectangle>> {
    class FlightPlan <<entity>> {
        dslContent
    }
    Enum FlightPlanStatus {
        DRAFT
        VALIDATED
        TESTED
    }
}

package "WeatherData Aggregate" <<Rectangle>> {
    class WeatherData <<entity, aggregate root>> {
        areaCode
        date
        windSpeed
        windDirection
        temperature
        pressure
        visibility
    }
    class WeatherSource <<value object>> {
        provider
        format
    }
}

Pilot "1" --> "1" User                   : "is a"
Pilot "0..*" --> "1" AirTransportCompany : "belongs to"
Pilot "1" --> "1..*" AircraftModel       : "certified for"
Pilot "1" --> "0..*" FlightPlan          : "submits"

AirTransportCompany "1" --> "1" IATACode : "identified by"

FlightPlan "1" --> "1" FlightPlanStatus  : "has"
FlightPlan "1" --> "0..*" WeatherData    : "uses"

WeatherData "1" *-- "1" WeatherSource    : "imported from"

@enduml
